--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_application.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_application.html
@@ -18,10 +18,26 @@
 						</div>
 					</div>
 					<!-- End Side Bar-->
-
+					
+					<#assign current_business_example = "">
+					<#list combo_business_classes?sort_by('name') as business>
+						<#assign used = false>
+						<#list plugin_applications as plugin_application> 
+							<#if plugin_application.getIdBusinessClasses()?seq_contains(business.code?number)>
+								<#assign used=true>
+								<#break>
+							</#if>
+						</#list>
+						<#if used=false>
+							<#assign current_business_example=business.name>	
+							<#break>
+						</#if>
+					</#list>
+					
+					
 					<!-- Card Content-->
 					<div class="col-md-9">
-						<form class="form-horizontal" method="post" action="jsp/site/Portal.jsp">
+						<form id="create-application-form" class="form-horizontal" method="post" action="jsp/site/Portal.jsp">
 							<fieldset>
 								<legend>#i18n{pluginwizard.pluginwizard_create_application.pageTitle}</legend>
 								
@@ -30,59 +46,64 @@
 								<input type="hidden" name="page" value="pluginwizard" />
 								
 								<!-- Group form Application Name -->
-								<div class="row mb-3 align-items-center">
-									<label class="col-form-label col-md-2 text-end">
-										#i18n{pluginwizard.pluginwizard_create_application.labelApplicationName} : 
+								 <div class="row mb-3 align-items-start">
+                                    <label class="col-form-label col-md-2 text-end align-self-start">
+										#i18n{pluginwizard.pluginwizard_create_application.labelApplicationName} * : 
 									</label>
 									<div class="col-md-10">
-										<input class="form-control" type="text" name="application_name"
-											value="<#if application.applicationName??>${application.applicationName}<#else>${plugin_model.pluginName?keep_after('-')?lower_case}</#if>" />
+										<input id="applicationName-input" class="form-control" type="text" name="application_name"
+											value="<#if current_business_example!=''>${current_business_example?lower_case}</#if>" placeholder="<#if current_business_example!=''>${current_business_example?lower_case}</#if>" maxlength=100/>
+                                        <div id="applicationName-help-message-div" class="mt-2 text-muted" aria-live="polite" role="alert">      
+											<span id="applicationName-help-message-span" class="d-block"><i id="applicationName-help-icon"></i>
+												#i18n{pluginwizard.pluginwizard_create_application.helpRulesApplicationName}
+											</span>
+											<span id="applicationNameSize-help-message-span" class="d-block"><i id="applicationNameSize-help-icon"></i>
+												#i18n{pluginwizard.pluginwizard_create_application.helpRulesApplicationNameSize}
+											</span>
+										</div>
 									</div>
 								</div>
 
-								<!-- Group form Class -->
-								<div class="row mb-3 align-items-center">
-									<label class="col-form-label col-md-2 text-end">
-										#i18n{pluginwizard.pluginwizard_create_application.labelApplicationClass} : 
+								<!-- Group form Application Class -->
+ 								<div class="row mb-3 align-items-start">
+                                    <label class="col-form-label col-md-2 text-end align-self-start">
+										#i18n{pluginwizard.pluginwizard_create_application.labelApplicationClass} * : 
 									</label>
 									<div class="col-md-10">
-										<input class="form-control" type="text" name="application_class"
-											value="<#if application.applicationClass??>${application.applicationClass}<#else>${plugin_model.pluginName?keep_after('-')?cap_first}App</#if>" />
+										<input type="text" id="applicationClass-input" name="application_class" class="form-control"
+											value="<#if current_business_example!=''>${current_business_example?cap_first}</#if>App" placeholder="<#if current_business_example!=''>${current_business_example?cap_first}</#if>App" maxlength=100/>
+									    <div id="applicationClass-help-message-div" class="mt-2 text-muted" aria-live="polite" role="alert">      
+											<span id="applicationClass-help-message-span" class="d-block"><i id="applicationClass-help-icon"></i>
+												#i18n{pluginwizard.pluginwizard_create_application.helpRulesApplicationClass}
+											</span>
+											<span id="applicationClassSize-help-message-span" class="d-block"><i id="applicationClassSize-help-icon"></i>
+												#i18n{pluginwizard.pluginwizard_create_application.helpRulesApplicationClassSize}
+											</span>
+										</div>
 									</div>
 								</div>
 
 								<!-- Group form Business Class -->
-								<div class="row mb-3">
-									<label class="col-form-label col-md-3">
-										#i18n{pluginwizard.pluginwizard_create_application.labelBusinessClass} : 
+								 <div class="row mb-3 align-items-start">
+                                    <label class="col-form-label col-md-2 text-end align-self-start">
+										#i18n{pluginwizard.pluginwizard_create_application.labelBusinessClass} * : 
 									</label>
 									<div class="col-md-9">
-										<div class="checkbox">
-											<#list combo_business_classes?sort_by('name') as business>
-												<div class="form-check">
-													<#assign used=false> 
-													<#list plugin_applications as plugin_application> 
-														<#if plugin_application.getIdBusinessClasses()?seq_contains(business.code?number)>
-															<#assign used=true>
-														</#if>
-													</#list> 
-													<#if used> 
-														<input type="checkbox" class="form-check-input" disabled
-																id="business_${business.code}"
-																name="id_business_class${business.code}" 
-																value="${business.code}" />
-													<#else> 
-														<input type="checkbox" class="form-check-input"
-																id="business_${business.code}"
-																name="id_business_class${business.code}" 
-																value="${business.code}" />
+										<#list combo_business_classes?sort_by('name') as business>
+											<div class="form-check">
+												<#assign used = false>
+												<#list plugin_applications as plugin_application> 
+													<#if plugin_application.getIdBusinessClasses()?seq_contains(business.code?number)>
+														<#assign used = true>
 													</#if>
-													<label class="form-check-label" for="business_${business.code}"> 
-														${business.name} 
-													</label>
-												</div>
-											</#list>
-										</div>
+												</#list>
+												<#if used>
+													<input type="checkbox" name="id_business_class${business.code}" value="${business.code}" disabled="disabled" /><label> &nbsp; ${business.name}</label><br />
+												<#else>
+													<input type="checkbox" name="id_business_class${business.code}" value="${business.code}" <#if current_business_example=business.name>checked</#if> /><label>&nbsp;${business.name}</label><br />
+												</#if>
+											</div>
+										</#list>
 									</div>
 								</div>
 
@@ -106,3 +127,12 @@
 		</div>
 	</div>
 </div>
+
+
+<script src='js/plugins/pluginwizard/validator.js'></script>
+<script>
+updateFormFront('create-application-form');
+document.getElementById('create-application-form').addEventListener('input', function(event){
+	validationForm(event);
+});
+</script>
