--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_attribute.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_attribute.html
@@ -21,7 +21,7 @@
 
                     <!-- Card Content-->
                     <div class="col-md-9">
-                        <form class="form-horizontal" role="form" method="post" action="jsp/site/Portal.jsp">
+                        <form id="create-attribute-form" class="form-horizontal" role="form" method="post" action="jsp/site/Portal.jsp">
                             <fieldset>
                                 <legend>#i18n{pluginwizard.pluginwizard_create_attribute.pageTitle}</legend>
                                 
@@ -31,35 +31,43 @@
                                 <input type="hidden" name="business_class_id" value="${business_class_id}" />
 
                                 <!-- Group form attribute name -->
-                                <div class="row mb-3 align-items-center">
-                                    <label class="col-form-label col-md-2 text-end">
+                                <div class="row mb-3 align-items-start">
+                                    <label class="col-form-label col-md-2 text-end align-self-start">
                                         #i18n{pluginwizard.pluginwizard_create_attribute.labelAttributeName} * :
                                     </label>
                                     <div class="col-md-10">
-                                        <input type="text" class="form-control" name="attribute_name" 
-                                               value="${attribute.attributeName!}" size="30" />
+                                        <input id="attributeName-input" type="text" class="form-control" name="attribute_name" 
+                                               value="${attribute.attributeName!}" size="30" maxlength="64"/> 
+                                        <div id="attributeName-help-message-div" class="mt-2 text-muted" aria-live="polite" role="alert">      
+											<span id="attributeName-help-message-span" class="d-block"><i id="attributeName-help-icon"></i>
+												#i18n{pluginwizard.pluginwizard_create_attribute.helpRulesAttribut}
+											</span>
+											<span id="attributeNameSize-help-message-span" class="d-block"><i id="attributeNameSize-help-icon"></i>
+												#i18n{pluginwizard.pluginwizard_create_attribute.helpRulesAttributSize}
+											</span>
+										</div>
                                     </div>
                                 </div>
 
 								<!-- Group form attribute type -->
-                                <div class="row mb-3 align-items-center">
-                                    <label class="col-form-label col-md-2 text-end">
+                                 <div class="row mb-3 align-items-start">
+                                    <label class="col-form-label col-md-2 text-end align-self-start">
                                         #i18n{pluginwizard.pluginwizard_create_attribute.labelAttributeType} * :
                                     </label>
                                     <div class="col-md-10">
                                         <@select name="attribute_type_id" 
                                                  default_value="${attribute.attributeTypeId!'1'}" 
-                                                 class='form-control input-md' 
+                                                 class='form-select' 
                                                  items=combo_attribute_type />
                                     </div>
                                 </div>
 								
 								<!-- Group form Mandatory-->
-                                <div class="row mb-3 align-items-center">
-                                    <label class="col-form-label col-md-2 text-end">
-                                        #i18n{pluginwizard.pluginwizard_create_attribute.labelMandatory} * : 
+                                 <div class="row mb-3 align-items-start">
+                                    <label class="col-form-label col-md-2 text-end align-self-start">
+                                        #i18n{pluginwizard.pluginwizard_create_attribute.labelMandatory} : 
                                     </label>
-                                    <div class="col-md-10">
+                                    <div class="col-md-10 mt-4">
                                         <div class="checkbox">    
                                             <div class="form-check">
                                                 <input class="form-check-input" type="checkbox" name="not_null" value="1" 
@@ -89,3 +97,11 @@
         </div>
     </div>
 </div>
+
+<script src='js/plugins/pluginwizard/validator.js'></script>
+<script>
+	updateFormFront('create-attribute-form');
+	document.getElementById('create-attribute-form').addEventListener('input', function(event){
+		validationForm(event);
+	});
+</script>
