--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin.html
@@ -21,7 +21,7 @@
 				    
 		            <!-- Card Content-->
 					<div class="col-md-9">						
-						<form class="form-horizontal" role="form" method="post" action="jsp/site/Portal.jsp">
+						<form id="modify-plugin-form" class="form-horizontal" role="form" method="post" action="jsp/site/Portal.jsp">
 							<fieldset>
 								<legend style="border-bottom: 1px solid #e5e5e5;">#i18n{pluginwizard.pluginwizard_modify_plugin.pageTitle}</legend>
 								
@@ -29,12 +29,12 @@
 								<#include "errors_handler.html" />
 
 								<div class="float-end">
-		                            <img src="images/local/skin/java.png" alt="Java logo" width="80" /> <strong>OR</strong>
-		                            <img src="images/local/skin/kotlin.png" alt="Kotlin logo" width="80" />
+		                            <img src="images/local/skin/java.png" alt="Java logo" width="80" /> <!--<strong>OR</strong> 
+									<img src="images/local/skin/kotlin.png" alt="Kotlin logo" width="80" />-->
 		                        </div>
 								
 								<input type="hidden" name="page" value="pluginwizard" />
-								<input type="hidden" name="action" value="do_create_plugin" />
+								<input type="hidden" name="action" value="createPlugin" />
 	         					
 	         					<!-- list of components generated -->
 								<div class="form-group">
@@ -58,18 +58,34 @@
 	
 								<!-- Create plugin section -->
 								<div class="mb-3 p-3 border rounded bg-light">
+									<h4>#i18n{pluginwizard.pluginwizard_modify_plugin.modifyPlugin}</h4>
 									<div class="row">
-										<label class="col-md-3 col-form-label">
-											#i18n{pluginwizard.pluginwizard_modify_plugin.labelPluginName} : 
-										</label>
-										<div class="col-md-5">
-											<input class="form-control" type="text" name="plugin_name" value="<#if plugin_model.pluginName??>${plugin_model.pluginName}</#if>" size="30" />
-											<span class="text-muted">
-												#i18n{pluginwizard.pluginwizard_modify_plugin.labelPluginNameHelp}
-											</span>
+										<div class="col mb-3 align-items-center">
+		                                    <div class="col-md-10">
+		                                    	<div class="form-check">
+											    	<input type="radio" id="id-project-type-plugin" name="project_type_selector" class="form-check-input" value="plugin" checked>
+											    	<label class="form-check-label" for="id-project-type-plugin">
+											      		#i18n{pluginwizard.pluginwizard_modify_plugin.OptionPlugin}
+											    	</label>
+											  	</div>
+											  	<div class="form-check">
+											    	<input type="radio" id="id-project-type-module" name="project_type_selector" class="form-check-input" value="module">
+											    	<label class="form-check-label" for="id-project-type-module">
+											      		#i18n{pluginwizard.pluginwizard_modify_plugin.OptionModule}
+											    	</label>
+											  	</div> 
+		                                    </div>
+	                                	</div>
+
+										<div class="col-md-7">
+											<input type="text" id="projectName-input" name="name" class="form-control" placeholder="#i18n{pluginwizard.pluginwizard_modify_plugin.placeholderPluginName}" value="<#if plugin_model.pluginName??>${plugin_model.pluginName}</#if>" aria-describedby="projectName-help-message-div" size="30"/> 
+											<div id="projectName-help-message-div" class="mt-2 text-muted" aria-live="polite" role="alert">
+												<span id="mandatory-help-message-span" class="d-block"><i id="mandatory-help-icon" class="mx-1"></i> #i18n{pluginwizard.pluginwizard_modify_plugin.helpRulesMandatoryPluginName}</span>
+												<span id="pluginName-help-message-span" class="d-block"><i id="pluginName-help-icon" class="mx-1"></i> #i18n{pluginwizard.pluginwizard_modify_plugin.helpRulesPluginName}</span>
+											</div>
 										</div>
 					
-										<div class="col-md-4"> 
+										<div class="col-md-2"> 
 											<input type="submit" name="do_create_plugin" class="btn btn-primary" value="#i18n{pluginwizard.pluginwizard_modify_plugin.buttonModifyPlugin}" />
 										</div>
 									</div>
@@ -83,3 +99,33 @@
 		</div>
 	</div>
 </div>
+
+<script src='js/plugins/pluginwizard/validator.js'></script>
+
+<script>
+	
+	const dictionnaryHelperMessage = {
+	 	"plugin": {
+	 		"placeholder": "#i18n{pluginwizard.pluginwizard_modify_plugin.placeholderPluginName}",
+	 		"mandatory": "#i18n{pluginwizard.pluginwizard_modify_plugin.helpRulesMandatoryPluginName}",
+	 		"pluginName": "#i18n{pluginwizard.pluginwizard_modify_plugin.helpRulesPluginName}"
+	 	},
+	 	"module": {
+	 		"placeholder": "#i18n{pluginwizard.pluginwizard_modify_plugin.placeholderModuleName}",
+	 		"mandatory": "#i18n{pluginwizard.pluginwizard_modify_plugin.helpRulesMandatoryModuleName}",
+	 		"moduleName": "#i18n{pluginwizard.pluginwizard_modify_plugin.helpRulesModuleName}",
+	 		"conventionModuleName" : "#i18n{pluginwizard.pluginwizard_modify_plugin.helpRulesConventionModuleName}"
+	 	}
+	 }
+			
+	//Update the form front 
+	switchTypeProject('modify-plugin-form');
+	
+	//Listerners
+	document.getElementById('modify-plugin-form').addEventListener('input', function(event){validationForm(event);});
+	document.querySelectorAll('input[name="project_type_selector"]').forEach(button => {
+	  button.addEventListener('change', function(){ switchTypeProject('modify-plugin-form');
+	  });
+	});
+  
+</script>
