--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin_description.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin_description.html
@@ -1,7 +1,7 @@
 <#include "sidebar.html" />
 
 <div class="row">
-	<div class="container" style="font-size: 14px; line-height: 1.42857143;">
+	<div class="container mt-4" style="font-size: 14px; line-height: 1.42857143;">
 		<div class="card">
 			<div class="card-body">
 				<div class="row">
@@ -12,7 +12,7 @@
 						<div class="card bg-light mt-2" height="max-auto">
 							<div class="card-body">
 								<div class="card-text">
-									#i18n{pluginwizard.pluginwizard_create_plugin_description.pageHelp}
+									#i18n{pluginwizard.pluginwizard_modify_plugin_description.pageHelp}
 								</div>
 							</div>
 						</div>
@@ -21,124 +21,151 @@
 
             		<!-- Card Content-->
 					<div class="col-md-9">
-						<#include "errors_handler.html" />
-						<#include "infos_handler.html" />
-						<form class="form-horizontal" method="post"
+						<form id="modify-description-form" class="form-horizontal" method="post"
 							action="jsp/site/Portal.jsp">
 							<fieldset>
-								<h4>#i18n{pluginwizard.pluginwizard_create_plugin_description.pageTitle}</h4>
-
-								<input type="hidden" name="page" value="pluginwizard" /> <input
-									type="hidden" name="id_plugin" value="${plugin_model.idPlugin}" />
+								<legend>#i18n{pluginwizard.pluginwizard_modify_plugin_description.pageTitle}</legend>
+								
+								<#include "errors_handler.html" />
+								<#include "infos_handler.html" />
+								
+								<input type="hidden" name="page" value="pluginwizard" /> 
+								<input type="hidden" name="id_plugin" value="${plugin_model.idPlugin}" />
 
 								<!-- Group form Plugin Name -->
 								<div class="row mb-3 d-flex align-items-center">
 									<label class="col-form-label col-md-2 text-end">
-										#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginName}
-										* : </label>
+										#i18n{pluginwizard.pluginwizard_modify_plugin_description.labelPluginName} * : 
+									</label>
 									<div class="col-md-10">
-										<input type="text" class="form-control" name="plugin_name"
-											value="${plugin_model.pluginName!''}" readonly style="background-color: #eeeeee;"/>
+										<input type="text" name="plugin_name" class="form-control" value="${plugin_model.pluginName!''}" readonly style="background-color: #eeeeee;"/>
 									</div>
 								</div>
 
 								<!-- Group form Plugin Type -->
-								<div class="row mb-3 d-flex align-items-center">
-									<label class="col-form-label col-md-2 text-end">Type *
-										:</label>
+								<div class="row mb-3 align-items-start">
+                                    <label class="col-form-label col-md-2 text-end align-self-start">
+                                    	#i18n{pluginwizard.pluginwizard_modify_plugin_description.labelPluginType} * :
+									</label>
 									<div class="col-md-10">
-										<select class="form-select" name="type">
-											<option value="PLUGIN">Plugin</option>
-											<#if ( (plugin_model.type?? && plugin_model.type='MODULE'
-												) || (plugin_model.pluginName?? && plugin_model.pluginName?contains('-'))
-												)>
-											<option value="MODULE" selected>Module</option>
-											<#else>
-											<option value="MODULE">Module</option></#if>
-
-										</select>
+										<input class="form-control" type="text" name="type"
+                                               value=<#if (
+                                                    (plugin_model.type?? && plugin_model.type == 'MODULE') || 
+                                                    (plugin_model.pluginName?? && plugin_model.pluginName?contains('-'))
+                                                    )> #i18n{pluginwizard.pluginwizard_modify_plugin_description.labelModule}
+                                                    <#else> #i18n{pluginwizard.pluginwizard_modify_plugin_description.labelPlugin} 
+                                                    </#if> readonly
+                                               style="background-color: #eeeeee;" />
 									</div>
 								</div>
 
 								<!-- Group form Plugin Description -->
-								<div class="row mb-3 d-flex align-items-center">
-									<label class="col-form-label col-md-2 text-end">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginDescription}
-										* : </label>
+								<div class="row mb-3 align-items-start">
+                                    <label class="col-form-label col-md-2 text-end align-self-start">
+                                    	#i18n{pluginwizard.pluginwizard_modify_plugin_description.labelPluginDescription} * : 
+									</label>
 									<div class="col-md-10">
-										<input class="form-control" type="text"
-											name="plugin_description"
-											value="${plugin_model.pluginDescription!''}" />
+										<input type="text"
+											id="pluginDescription-input" name="plugin_description" class="form-control" 
+											value="${plugin_model.pluginDescription!''}" aria-describedby="pluginDescription-help-message-div" maxlength=255/>
+											<div id="pluginDescription-help-message-div" class="mt-2 text-muted" aria-live="polite" role="alert">
+											<span id="pluginDescription-help-message-span" ><i id="pluginDescription-help-icon"></i> 
+												#i18n{pluginwizard.pluginwizard_modify_plugin_description.helpRulesPluginDescription}
+											</span>
+										</div>
 									</div>
 								</div>
 
 								<!-- Group form Plugin Provider -->
-								<div class="row mb-3 d-flex align-items-center">
-									<label class="col-form-label col-md-2 text-end">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginProvider}
-										* : </label>
+								<div class="row mb-3 align-items-start">
+                                    <label class="col-form-label col-md-2 text-end align-self-start">
+                                    	#i18n{pluginwizard.pluginwizard_modify_plugin_description.labelPluginProvider}	* : 
+									</label>
 									<div class="col-md-10">
-										<input class="form-control input-md" type="text"
-											name="plugin_provider"
-											value="${plugin_model.pluginProvider!''}" />
+										<input type="text" id="pluginProvider-input" name="plugin_provider" class="form-control"
+											value="${plugin_model.pluginProvider!''}" placeholder="#i18n{pluginwizard.pluginwizard_modify_plugin_description.placeholderPluginProvider}" aria-describedby="pluginProvider-help-message-div" maxlength=255/>
+										<div id="pluginProvider-help-message-div" class="mt-2 text-muted" aria-live="polite" role="alert">
+                                            <span id="pluginProvider-help-message-span" ><i id="pluginProvider-help-icon"></i> 
+                                                #i18n{pluginwizard.pluginwizard_modify_plugin_description.helpRulesPluginProvider}
+                                            </span>
+                                        </div>
 									</div>
 								</div>
 
 								<!-- Group form Plugin Version -->
-								<div class="row mb-3 d-flex align-items-center">
-									<label class="col-form-label col-md-2 text-end">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginVersion}
-										* : </label>
+								<div class="row mb-3 align-items-start">
+                                    <label class="col-form-label col-md-2 text-end align-self-start">
+                                    	#i18n{pluginwizard.pluginwizard_modify_plugin_description.labelPluginVersion} * : 
+									</label>
 									<div class="col-md-10">
-										<input class="form-control" type="text" name="plugin_version"
-											value="${plugin_model.pluginVersion!''}" size="30" />
+										<input type="text" id="pluginVersion-input" name="plugin_version" class="form-control"
+											value="${plugin_model.pluginVersion!''}" placeholder="#i18n{pluginwizard.pluginwizard_modify_plugin_description.placeholderPluginVersion}" aria-describedby="pluginVersion-help-message-div" maxlength=10 size="30" />
+										<div id="pluginVersion-help-message-div" class="mt-2 text-muted" aria-live="polite" role="alert">
+                                            <span id="pluginVersion-help-message-span" ><i id="pluginVersion-help-icon"></i> 
+                                                #i18n{pluginwizard.pluginwizard_modify_plugin_description.helpRulesPluginVersion}
+                                            </span>
+                                        </div>
 									</div>
 								</div>
 
 								<!-- Group form Plugin Copyright -->
-								<div class="row mb-3 d-flex align-items-center">
-									<label class="col-form-label col-md-2 text-end">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginCopyright}
-										* : </label>
+								<div class="row mb-3 align-items-start">
+                                    <label class="col-form-label col-md-2 text-end align-self-start">
+                                    	#i18n{pluginwizard.pluginwizard_modify_plugin_description.labelPluginCopyright} * : 
+									</label>
 									<div class="col-md-10">
-										<input class="form-control input-md" type="text"
-											name="plugin_copyright"
-											value="${plugin_model.pluginCopyright!''}" size="30" />
+										<input type="text" id="pluginCopyright-input" name="plugin_copyright" class="form-control" 
+											value="${plugin_model.pluginCopyright!''}" placeholder="#i18n{pluginwizard.pluginwizard_modify_plugin_description.placeholderPluginCopyright}" aria-describedby="pluginCopyright-help-message-div" maxlength=255 size="30" />
+									<div id="pluginCopyright-help-message-div" class="mt-2 text-muted" aria-live="polite" role="alert">
+                                            <span id="pluginCopyright-help-message-span" ><i id="pluginCopyright-help-icon"></i> 
+                                                #i18n{pluginwizard.pluginwizard_modify_plugin_description.helpRulesPluginCopyright}
+                                            </span>
+                                        </div>
 									</div>
 								</div>
 
 								<!-- Group form Plugin Url -->
-								<div class="row mb-3 d-flex align-items-center">
-									<label class="col-form-label col-md-2 text-end">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginProviderUrl}
-										* : </label>
+								<div class="row mb-3 align-items-start">
+                                    <label class="col-form-label col-md-2 text-end align-self-start">
+                                    	#i18n{pluginwizard.pluginwizard_modify_plugin_description.labelPluginProviderUrl} * : 
+									</label>
 									<div class="col-md-10">
-										<input class="form-control" type="text"
-											name="plugin_provider_url"
-											value="${plugin_model.pluginProviderUrl!''}" />
+										<input type="text" id="pluginProviderUrl-input" name="plugin_provider_url" class="form-control"
+											value="${plugin_model.pluginProviderUrl!''}" placeholder="#i18n{pluginwizard.pluginwizard_modify_plugin_description.placeholderPluginProviderUrl}" aria-describedby="pluginProviderUrl-help-message-div" maxlength=255 />
+										<div id="pluginProviderUrl-help-message-div" class="mt-2 text-muted" aria-live="polite" role="alert">
+                                            <span id="pluginProviderUrl-help-message-span" ><i id="pluginProviderUrl-help-icon"></i> 
+                                                #i18n{pluginwizard.pluginwizard_modify_plugin_description.helpRulesPluginProviderUrl}
+                                            </span>
+                                        </div>
 									</div>
 								</div>
 
 								<!-- Group form Plugin Pool required -->
-								<div class="row mb-3 d-flex align-items-center">
-									<label class="col-form-label col-md-2 text-end">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPlugindbPoolRequired}
-										* : </label>
+								<div class="row mb-3 align-items-start">
+                                    <label class="col-form-label col-md-2 text-end align-self-start">
+                                    	#i18n{pluginwizard.pluginwizard_modify_plugin_description.labelPlugindbPoolRequired} * : 
+									</label>
 									<div class="col-md-10">
 										<select class="form-select" name="plugin_db_pool_required">
-											<option value="1">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelTrue}
+											<option value="1">#i18n{pluginwizard.pluginwizard_modify_plugin_description.labelTrue}
 											</option>
-											<option value="0">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelFalse}
+											<option value="0">#i18n{pluginwizard.pluginwizard_modify_plugin_description.labelFalse}
 											</option>
 										</select>
 									</div>
 								</div>
 								
 								<!-- Submit Buttons -->	
-								<div class="row">
-									<div class="col-md-offset-3 col-md-9">
-										<button type="submit" name="action_descriptionPrevious"
+								<div class="row mb-3">
+									<div class="col-md-9 offset-md-3">
+										<button type="submit" name="view_createPlugin"
 											class="btn btn-primary">
 											<i class="ti ti-chevron-left"></i>
-											#i18n{pluginwizard.pluginwizard_create_plugin_description.buttonBack}
+											#i18n{pluginwizard.pluginwizard_modify_plugin_description.buttonBack}
 										</button>
 										<button type="submit" name="action_descriptionNext"
 											class="btn btn-primary">
-											#i18n{pluginwizard.pluginwizard_create_plugin_description.buttonNext}
+											#i18n{pluginwizard.pluginwizard_modify_plugin_description.buttonNext}
 											<i class="ti ti-chevron-right"></i>
 										</button>
 									</div>
@@ -153,3 +180,9 @@
 		</div>
 	</div>
 </div>
+
+<script src='js/plugins/pluginwizard/validator.js'></script>
+<script>
+	updateFormFront('modify-description-form');
+	document.getElementById('modify-description-form').addEventListener('input', function(event){validationForm(event);});
+</script>
